sidebar spacing fix

--- a/scss/_spacing.scss
+++ b/scss/_spacing.scss
@@ -103,6 +103,18 @@ h1 + #contact-feedback {
   margin-top:       $default-spacing;
 }
 
+h1 + .sidebar + p,h2 + .sidebar + p,h3 + .sidebar + p,h4 + .sidebar + p,h5 + .sidebar + p {
+  margin-top:       0;
+}
+
+h1 + .sidebar,h2 + .sidebar,h3 + .sidebar,h4 + .sidebar,h5 + .sidebar {
+  margin-top:       .5em;
+}
+
+p + .sidebar {
+  margin-top:       $paragraph-spacing + .5em;
+}
+
 // Break
 .break {
   margin-top:       $default-spacing * 3;
